# readinghydro.com

./: .gitignore  README.md  credentials.json  hydroPi node-red flows-pretty.json  hydroPi node-red flows.json  hydroPi node-red-flows-pretty.json  setup.cfg  stackscript-new.sh  stackscript.sh
EAData/: EADataCollector.go  EADataCollector.py  dependancies.md  deploy.sh  eadatacron
EAData/rust_eadata_collector/: Cargo.toml
EAData/rust_eadata_collector/src/: main.rs
SquaredUp/: api query.js
alertNotify/: README.md  Readme.md  alert_service.py  calendarread.py  calendarreadgoogle.py  credentials.json  deploy.sh  mqtt-topic.py  mqtt-topic.spec  restServer.py  sendmail.py  sendntfy.py  tokenHandeler.py
data/: data-async.html  data-explore.html  data.html  energy-async.html  energy-power.html  home-data-left.html  home-data-right.html  hydrodata.css  levels-flow-2.html  levels-flow-async.html  levels-flow.html  notes-on-data-pages.txt  test-page4  test-page4.html  turbine-house-async.html  turbine-house.html
etc/: README.md  number-people.setup  robots.txt
etc/apache2/mods-available/: mpm_prefork.conf  status.conf
etc/cron/: eadatacron  postgresrefresh
etc/logrotate.d/: wordpress
etc/mosquitto/: passwd
etc/mosquitto/conf.d/: default.conf
etc/postfix/: main.cf
etc/postgresql/: eadata.sql  hydrodb.sql  summerise.sql
etc/ssh/: sshd_config
etc/systemd/: hydro-alert-notify.service  hydro-api.service  hydro-collector.service
meterread/: OB737meterread.py  meterread.py  testread.py  ups_send_alert.py
nut/: notifycmd  nut.conf  ups.conf  upsmon.conf
(+6 files in other folders)
