[package]
name = "rust_eadata_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
aws-config = "0.58.0"
aws-sdk-secretsmanager = "0.28.0"
log = "0.4"
env_logger = "0.10"
